--- a/index.html
+++ b/index.html
@@ -33,27 +33,39 @@
     const contracts = {
       Unichain: {
         address: "0x3f183B283fdA263B3F868A30602474CD9f555B15",
-        rpc: "https://uni-rpc.meson.network"
+        rpc: "https://uni-rpc.meson.network",
+        chainId: 248,
+        chainName: "Unichain"
       },
       Superseed: {
         address: "0x8A14aa6c865AbECc3AbF99FD6c6d622e45B7c54D",
-        rpc: "https://rpc.superseed.xyz"
+        rpc: "https://rpc.superseed.xyz",
+        chainId: 333666,
+        chainName: "Superseed"
       },
       Ink: {
         address: "0x8053BD8a75A8d023FC6C349D04823d6e5fBDC186",
-        rpc: "https://rpc.inkonchain.com"
+        rpc: "https://rpc.inkonchain.com",
+        chainId: 747,
+        chainName: "Ink"
       },
       Plume: {
         address: "0x98C41425442B188e18cb630A78c6d0344209D36B",
-        rpc: "https://rpc.plume.org"
+        rpc: "https://rpc.plume.org",
+        chainId: 5857,
+        chainName: "Plume"
       },
       Soneium: {
         address: "0x136f7c2acf5cc179461814ed78d1164860447fc8",
-        rpc: "https://rpc.soneium.blockscout.com"
+        rpc: "https://rpc.soneium.blockscout.com",
+        chainId: 1229,
+        chainName: "Soneium"
       },
       HyperEvm: {
         address: "0x390fcDe6b5228b75FBeD532c922aa8835611aDc7",
-        rpc: "https://rpc.hyperchain.xyz"
+        rpc: "https://rpc.hyperchain.xyz",
+        chainId: 111000,
+        chainName: "HyperEvm"
       }
     };
 
@@ -87,14 +99,44 @@
       for (const [name, data] of Object.entries(contracts)) {
         const btn = document.createElement("button");
         btn.innerText = `GM on ${name}`;
-        btn.onclick = () => callGM(name, data);
+        btn.onclick = () => switchNetworkAndCallGM(name, data);
         container.appendChild(btn);
       }
     }
 
-    async function callGM(name, { address, rpc }) {
+    async function switchNetworkAndCallGM(name, { address, rpc, chainId, chainName }) {
       try {
-        const provider = new ethers.providers.JsonRpcProvider(rpc);
+        // Try to switch network
+        await window.ethereum.request({
+          method: 'wallet_switchEthereumChain',
+          params: [{ chainId: ethers.utils.hexValue(chainId) }]
+        });
+      } catch (switchError) {
+        // If network not added, try to add it
+        if (switchError.code === 4902) {
+          try {
+            await window.ethereum.request({
+              method: 'wallet_addEthereumChain',
+              params: [{
+                chainId: ethers.utils.hexValue(chainId),
+                chainName: chainName,
+                rpcUrls: [rpc]
+              }]
+            });
+          } catch (addError) {
+            document.getElementById("status").innerText = `Failed to add network: ${addError.message}`;
+            return;
+          }
+        } else {
+          document.getElementById("status").innerText = `Failed to switch network: ${switchError.message}`;
+          return;
+        }
+      }
+
+      // Then call gm()
+      try {
+        const provider = new ethers.providers.Web3Provider(window.ethereum);
+        const signer = provider.getSigner();
         const contract = new ethers.Contract(address, abi, signer);
         const tx = await contract.gm();
         document.getElementById("status").innerText = `GM called on ${name}. TX: ${tx.hash}`;
