--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       Unichain: {
         address: "0x3f183B283fdA263B3F868A30602474CD9f555B15",
         rpc: "https://uni-rpc.meson.network",
-        chainId: 130, 
+        chainId: 0x82, 
         chainName: "Unichain",
         nativeCurrency: { name: "UNI", symbol: "UNI", decimals: 18 },
         blockExplorerUrls: ["https://unichain.blockscout.com"]
