--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <h1>GM Multi-Chain</h1>
+  <h1>GM Multi-Chain 0.2</h1>
   <button onclick="connectWallet()">Connect Rabby/Metamask</button>
   <button onclick="callGM('Unichain')">GM on Unichain</button>
   <button onclick="callGM('Superseed')">GM on Superseed</button>
