--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 
   <script>
     const networks = {
+      Base: {
+        address: "0xA3A9222F6c4C7881BFF282362C8310fA167387f6",
+        chainId: 8453,
+        chainName: "Base",
+        rpcUrls: ["wss://base-rpc.publicnode.com"],
+        blockExplorerUrls: ["https://base.blockscout.com"],
+        nativeCurrency: {
+          name: "Ethereum",
+          symbol: "ETH",
+          decimals: 18
+        }
+      },
       Unichain: {
         address: "0x3f183B283fdA263B3F868A30602474CD9f555B15",
         chainId: 130,
