--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <button onclick="connectWallet()">Connect Rabby/Metamask</button>
   </div>
   <div class="btn-row">
+    <button onclick="callGM('Base')">GM on Base</button>
     <button onclick="callGM('Unichain')">GM on Unichain</button>
     <button onclick="callGM('Superseed')">GM on Superseed</button>
     <button onclick="callGM('Ink')">GM on Ink</button>
